<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StampitGo</string>
    <string name="scan_success_text">Yippie! Scan successful!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stamps_fragment">Stamps Fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_restaurant_details">Restaurant Details</string>
    <string name="title_activity_stamps">Stamps</string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_data_check">DataCheck</string>
    <string name="title_activity_set_up">SetUp</string>
    <string name="userNameHint">Enter Your Username</string>
    <string name="passwordHint">Enter Your Password</string>
    <string name="loginButtonLabel">Login</string>
    <string name="title_activity_scan_response">Scan Response</string>
    <string name="nonearmelabel">No Stores NearBy</string>
    <string name="title_activity_redeem_reward">Your Reward</string>
    <string name="redeem">Redeem</string>
    <string name="redeemWarningMessage">You have to use the offer in next 30 minutes.Are you sure you want to redeem </string>
    <string name="title_activity_redeem_code">RedeemCode</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="app_id">205401119670598</string>
    <string name="terms">Terms \u0026 Privacy Policy</string>
    <string name="title_activity_get_started">GetStarted</string>
    <string name="onstamp">On Your New Stamp</string>
    <string name="Congratulations">Congratulations</string>
    <string name="from">from</string>
    <string name="RestarentName">Restarent Name</string>
    <string name="totalstamps">total stamps</string>
    <string name="stamps">STAMPS</string>
    <string name="review">Review your visit</string>
    <string name="five">5</string>
    <string name="submit">submit</string>
    <string name="first">we reward your loyalty \u0026</string>
    <string name="secound">value your visits</string>
    <string name="fourth">once you click on use now button you can redeem the offer in next 30 mins \u0026 show the screen to steward/Waiter/Bill Counter</string>
    <string name="signup">Sign Up</string>
    <string name="nice">Nice to see</string>
    <string name="you">   You </string>
    <string name="again"> again</string>
    <string name="sigin"> Sign In</string>
    <string name="or"> OR</string>
    <string name="email">   Please enter your Email</string>
    <string name="password"> Password</string>
    <string name="default_value">Filter By Category</string>
    <string name="title_activity_shout_out">Shoutout</string>
    <string name="title_activity_about_us">About Stampitgo</string>
    <string name="about_us">Stampitgo takes that extra mile for you \u0026 reward you with millions of smiles in a better way. With a little help from a savvy mobile app you can now cherish your loyalty without any effort for managing cards \u0026 offer details. </string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="oldpassword">Current Password</string>
    <string name="newpassword"> New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="reset">Change Password</string>
    <string name="forgot_pwd_alert">To reset your password, Please enter your registered email id. We will be sending you a reset link on the above email.</string>
    <string name="shoutout_edittext_message">"Umm.... it would be nice to write briefly"</string>
    <string name="shouout_textview">Pick one \u0026 rate your experience!</string>
    <string name="nostores">Perfection takes time! Give us a little more time to come up with great results.</string>
    <string name="internet_error">It seems we are not able to connect you. Have you checked your internet connection ?</string>
    <string name="server_error">Oops! We are recovering from a bad day.Please have patience \u0026 Login again.</string>
    <string name="no_nearby_stores">It seems we don’t have any stores in your area!</string>
    <string name="title_activity_promo_code">Promo Code</string>
    <string name="birthday_update_confirmation">Voila ! We got your special day.</string>
    <string name="bday_set_hint">Birthdays are best days! Let us make this day more special for you by rewarding you extra.</string>
    <string name="logged_in_no_stamps">Start Collecting Stamps from your favorite stores with a simple scan or quick subscribe</string>
    <string name="logged_in_no_rewards">Go through available rewards here \u0026 pick the one you want to enjoy </string>
    <string name="guest_user_no_stamps">Login \u0026 add your Stamped \u0026 Subscribed stores here</string>
    <string name="guest_user_norewards">Collect Stamps, Collect Rewards</string>
    <string name="scan_tool_tip">Click here to scan the QR code</string>
    <string name="mystamps_tool_tip">Check your Stamp count respective to visited \u0026 subscribed stores</string>
    <string name="rewards_tool_tip">Enjoy available rewards from here</string>
    <string name="nearby_tool_tip">Filter your choices \u0026 check the stores along with distance</string>
    <string name="overflow_tool_tip">Check your profile, Promo Codes, give feedback or simply know more about us</string>
    <string name="profile_tool_tip">Want to know more? Check or update your profile \u0026 Promo Codes , give us a feedback or simply know more about us.</string>
    <string name="tutorial_stamp_title">Stamp</string>
    <string name="tutorial_stamp_detail">Get Pampered on your each visit at the store</string>
    <string name="tutorial_redeem_title">Redeem</string>
    <string name="tutorial_redeem_detail">Get instant \u0026 valuable gifts by stamps from your favorite stores</string>
    <string name="tutorial_repeat_title">Repeat</string>
    <string name="tutorial_repeat_detail">Loved getting rewarded? Then repeat \u0026 get greater rewards.</string>
    <string name="tutorial_skip_text"><u>Explore Without Sign Up</u></string>
    <string name="facebook_button_text">Sign in with Facebook</string>
    <string name="stamp_history_null">Start getting rewards \u0026 check your rewarding journey here </string>
    <string name="shout_out_response">Got your Resposne \u0026 right on it! </string>
    <string name="scan_calcelled_msg">Come back again for a quick scan </string>
    <string name="forgot_password_title">ForgetPassword</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="internet_error_short">Oops!! You are not connected to internet.</string>
    <string name="tutorial_repeat_detail">Loved getting rewarded? Then repeat \u0026 get greater rewards.</string>
    <string name="tutorial_skip_text"><u>Explore without Sign Up</u></string>
    <string name="facebook_button_text">Sign in with Facebook</string>
    <string name="stamp_history_null">Start getting rewards \u0026 check your rewarding journey here </string>
    <string name="shout_out_response">Got your Response \u0026 right on it! </string>
    <string name="scan_calcelled_msg">Come back again for a quick scan </string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="internet_error_short">Oops!! You are not connected to internet.</string>
    <string name="scan_response_fb_share_button_label">Share your happiness!</string>
    <string name="update_name_notification_title">Win Name Game</string>
    <string name="update_name_notification_message">Win exciting prizes on your name. For that, update your name and mobile no. now in profile page.</string>
    <string name="update_bday_notification_title">Birthday Bonanzas!!!</string>
    <string name="update_bday_notification_message"> Psss! We give awesome Birthday presents. Check it yourself by updating your exact Birth date.</string>

</resources>