<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/newpasswordField"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/texview_hight"
        android:layout_alignLeft="@+id/oldpasswordField"
        android:layout_alignRight="@+id/oldpasswordField"
        android:layout_below="@+id/oldpasswordField"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_text_bg"
        android:ems="10"
        android:typeface="serif"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/texview_hight"
        android:layout_alignLeft="@+id/conformpasswordField"
        android:layout_alignRight="@+id/conformpasswordField"
        android:layout_below="@+id/conformpasswordField"
        android:layout_marginTop="30dp"
        android:background="@drawable/redbutton"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/oldpasswordField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/texview_hight"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_text_bg"
        android:hint="@string/oldpassword"
        android:inputType="textPassword"
        android:typeface="serif"
        android:padding="10dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/conformpasswordField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/texview_hight"
        android:layout_below="@+id/newpasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:typeface="serif"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_text_bg"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>